--- a/views/pagina_inicial.handlebars
+++ b/views/pagina_inicial.handlebars
@@ -1,3 +1,5 @@
-<title>oi</title>
-<marquee>MorraMorraMorraMorraMorraMorraMorraMorraMorra</marquee>
-<b1>LUCA E LE TEU REIO RATO </b1>
+<h1>Home</h1>
+<b1>Escolha alguma das páginas </b1>
+<a href="http://localhost:8080/albums">Albums</a>
+<a href="http://localhost:8080/posts">Posts</a>
+<a href="http://localhost:8080/to-dos">To-dos</a>
