Criando estrutura da página home

--- a/views/pagina_inicial.handlebars
+++ b/views/pagina_inicial.handlebars
@@ -1,5 +1,7 @@
-<h1>Home</h1>
-<b1>Escolha alguma das páginas </b1>
-<a href="http://localhost:8080/albums">Albums</a>
-<a href="http://localhost:8080/posts">Posts</a>
-<a href="http://localhost:8080/to-dos">To-dos</a>
+backg
+<div>
+  <img src="imagens/img-1.jpg" style='width:100%;' alt="Null" class="image">
+  <img src="imagens/img-2.jpg" style='width:100%;' alt="Null" class="image">
+  <img src="imagens/img-3.jpg" style='width:100%;' alt="Null" class="image">
+  <img src="imagens/img-4.jpg" style='width:100%;' alt="Null" class="image">
+</div>
