--- a/views/pagina_inicial.handlebars
+++ b/views/pagina_inicial.handlebars
@@ -1,7 +1,15 @@
-backg
-<div>
-  <img src="imagens/img-1.jpg" style='width:100%;' alt="Null" class="image">
-  <img src="imagens/img-2.jpg" style='width:100%;' alt="Null" class="image">
-  <img src="imagens/img-3.jpg" style='width:100%;' alt="Null" class="image">
-  <img src="imagens/img-4.jpg" style='width:100%;' alt="Null" class="image">
+<div id="pagepiling">
+  <div class="section">
+    <div class="section1">
+      <img src="imagens/ic-scroll.svg" height="100px" alt="Null" class="image"> 
+    </div>
+  </div>
+  <div class="section section2">
+  </div>
+  <div class="section section3">
+  </div>
+  <div class="section section4">
+  </div>
 </div>
+
+<script src="scripts/pagina_inicial.js"></script>
