--- a/views/pagina_inicial.handlebars
+++ b/views/pagina_inicial.handlebars
@@ -1,14 +1,20 @@
 <div id="pagepiling">
   <div class="section">
     <div class="section1">
-      <img src="imagens/ic-scroll.svg" height="100px" alt="Null" class="image"> 
+      <img src="imagens/ic-scroll.svg" height="100px" alt="Null" class="image">
     </div>
   </div>
   <div class="section section2">
+      <a class=" active" aria-current="page" href="/albums"><button class="hpb"; >
+            Ver álbuns</button></a>
   </div>
   <div class="section section3">
+          <a class=" active" aria-current="page" href="/posts"><button class="hpb"; >
+            Posts</button></a>
   </div>
   <div class="section section4">
+          <a class=" active" aria-current="page" href="/to-dos"><button class="hpb"; >
+            To-Dos</button></a>
   </div>
 </div>
 
