Página inicial praticamente finalizada.

--- a/views/pagina_inicial.handlebars
+++ b/views/pagina_inicial.handlebars
@@ -1,20 +1,36 @@
 <div id="pagepiling">
   <div class="section">
     <div class="section1">
-      <img src="imagens/ic-scroll.svg" height="100px" alt="Null" class="image">
+      <h1 class="text-homepage">Você deseja fazer parte do futuro?</h1>
+      <img src="imagens/ic-scroll.svg" class="mouse-image" />
     </div>
   </div>
-  <div class="section section2">
-      <a class=" active" aria-current="page" href="/albums"><button class="hpb"; >
-            Ver álbuns</button></a>
+  <div class="section">
+    <div class="section2">
+      <h1 class="text-homepage">Aqui estão os<br /> álbuns</h1>
+      <br />
+      <a class="active" aria-current="page" href="/albums">
+        <button class="album-btn">Ver álbuns</button>
+      </a>
+    </div>
   </div>
-  <div class="section section3">
-          <a class=" active" aria-current="page" href="/posts"><button class="hpb"; >
-            Posts</button></a>
+  <div class="section">
+    <div class="section3">
+      <h1 class="text-homepage"><br />Aqui estão as<br /> postagens</h1>
+      <a class="active" aria-current="page" href="/posts">
+        <button class="post-btn">Posts</button>
+      </a>
+    </div>
   </div>
-  <div class="section section4">
-          <a class=" active" aria-current="page" href="/to-dos"><button class="hpb"; >
-            To-Dos</button></a>
+  <div class="section">
+    <div class="section4">
+      <h1 class="text-homepage">E aqui os<br /> afazeres</h1>
+      <a class="active" aria-current="page" href="/to-dos">
+        <button class="todos-btn">Ver To-Dos        <i
+            class="fas fa-check"
+          ></i><i class="fas fa-times"></i></button>
+      </a>
+    </div>
   </div>
 </div>
 
