--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,62 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
-nav {
-  background-color: #54687d;
+/* Importando fontes */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap");
+*{
   font-family: "Open Sans";
 }
 
-button {
-  font-family: "Typold";
-  font-size: 36pt;
-}
-
-.hpb {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  background-color: #1db954;
-  color: white;
-  font-size: 16px;
-  padding: 16px 70px;
-  border: none;
-  cursor: pointer;
-  text-align: center;
-  transition-duration: 0.2s;
-  border-radius: 50px;
-}
-
-.hpb:hover {
-  background-color: #259f50;
-  color: white;
-  padding: 10px 60px;
-}
-
-.section1 {
-  display: flex;
-  height: inherit;
-  background-size: cover;
-  justify-content: center;
-  align-items: flex-end;
-  background-image: url("/imagens/img-1.jpg");
-}
-
-.section2 {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/imagens/img-2.jpg");
- background-size: cover;
-  justify-content: center;
-  display: flex;
-  width: inherit;
-}
-
-.section3 {
-  background-image: url("/imagens/img-3.jpg");
-  background-size: cover;
-}
-
-.section4 {
-  background-image: url("/imagens/img-4.jpg");
-  background-size: cover;
+/*Formatando navbar*/
+nav {
+  background-color: #54687d;
 }
 
 .navbar-nav {
@@ -65,6 +15,161 @@ button {
   justify-content: flex-end;
 }
 
+/*Formatando botões no geral*/
+button {
+  font-size: 36pt;
+}
+
+.album-btn {
+  font-size: 18px;
+  padding: 16px 70px;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  transition-duration: 0.2s;
+  border-radius: 50px;
+  background-color: #1db954;
+  color: white;
+}
+
+.post-btn {
+  font-size: 18px;
+  padding: 16px 70px;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  transition-duration: 0.2s;
+  border-radius: 10px;
+  background-color: #ed1b24;
+  color: white;
+  transition-duration: 0.2s;
+  -webkit-filter: drop-shadow(0px 0px 5px rgba(233, 89, 80, 0.6));
+  filter: drop-shadow(0px 0px 5px rgba(233, 89, 80, 0.6));
+  
+}
+
+.post-btn:after{
+  content: '';
+  width: 20px;
+  height: 20px;
+  background-color: #ed1b24;
+  position: absolute;
+  top: -7px;
+  left: 25px;
+  border-radius: 3px;
+  transform: skew(-30deg, 45deg);
+  z-index: -1;
+  transition-duration: 0.2s;
+}
+
+.post-btn:hover:after {
+  content: '';
+  width: 20px;
+  height: 20px;
+  background-color: #eb6b71;
+  position: absolute;
+  top: -7px;
+  left: 25px;
+  border-radius: 3px;
+  transform: skew(-30deg, 45deg);
+  z-index: -1;
+}
+
+.todos-btn {
+  font-size: 16px;
+  padding: 16px 70px;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  transition-duration: 0.2s;
+  border-radius: 50px;
+  background-color: rgb(243, 38, 38);
+}
+
+.fa-times{
+  padding-right: 5px;
+}
+
+.post-btn:hover{
+  color: whitesmoke;
+  background-color: #eb6b71;
+  padding: 13px 65px;
+  font-size: 13px;
+  border: 2px solid pink
+}
+
+.todos-btn:hover{
+  background-color: rgb(13, 182, 13);
+}
+
+.album-btn:hover {
+  color: whitesmoke;
+  background-color: #1a9d48;
+  padding: 13px 65px;
+  font-size: 13px;
+}
+
+/* Formatando sessões da página inicial */
+.section1 {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  url("/imagens/img-1.jpg");
+  display: flex;
+  height: inherit;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.text-homepage{
+  color: snow;
+}
+
+.mouse-image {
+  height: 100px;
+  position: absolute;
+  bottom: 0;
+}
+
+.section2 {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  url("/imagens/img-2.jpg");
+  display: flex;
+  width: inherit;
+  height: inherit;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  flex-direction: column;
+}
+
+.section3 {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  url("/imagens/img-3.jpg");
+  background-size: cover;
+  display: flex;
+  width: inherit;
+  height: inherit;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+}
+
+.section4 {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  url("/imagens/img-4.jpg");
+  background-size: cover;
+  display: flex;
+  width: inherit;
+  height: inherit;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+/* Formatando footer */
 footer {
   background-color: #54687d;
   display: flex;
