--- a/views/pagina_inicial.handlebars
+++ b/views/pagina_inicial.handlebars
@@ -7,7 +7,7 @@
   </div>
   <div class="section">
     <div class="section2">
-      <h1 class="text-homepage">Aqui estão os<br /> álbuns</h1>
+      <h1 class="text-homepage">Aqui estão os<br />       álbuns</h1>
       <br />
       <a class="active" aria-current="page" href="/albums">
         <button class="album-btn">Ver álbuns</button>
@@ -16,9 +16,9 @@
   </div>
   <div class="section">
     <div class="section3">
-      <h1 class="text-homepage"><br />Aqui estão as<br /> postagens</h1>
+      <h1 class="text-homepage"><br />Aqui estão as<br />    postagens</h1>
       <a class="active" aria-current="page" href="/posts">
-        <button class="post-btn">Posts</button>
+        <button class="post-btn">Ver posts</button>
       </a>
     </div>
   </div>
@@ -26,9 +26,8 @@
     <div class="section4">
       <h1 class="text-homepage">E aqui os<br /> afazeres</h1>
       <a class="active" aria-current="page" href="/to-dos">
-        <button class="todos-btn">Ver To-Dos        <i
-            class="fas fa-check"
-          ></i><i class="fas fa-times"></i></button>
+        <button class="todos-btn">Ver To-Dos
+          <i class="fas fa-check"></i><i class="fas fa-times"></i></button>
       </a>
     </div>
   </div>
