--- a/views/posts.handlebars
+++ b/views/posts.handlebars
@@ -1,15 +1,18 @@
-<h1>Posts</h1>
-{{#each posts}}
-<br>
-<b1>userId:</b1>
-<b4>{{userId}}</b4>
-<br>
-<b1>ID:</b1>
-<b4>{{id}}</b4>
-<br>
-<b1>Title:</b1>
-<b4>{{title}}</b4>
-<br>
-<b1>Body:</b1>
-<b4>{{body}}</b4>
-{{/each}}
+<div class="table-div container-fluid"> 
+  <div>
+    <table class="table table-bordered table-dark">
+    <thead>
+    <thead>
+        <tr>
+        <th scope="col">UserID</th>
+        <th scope="col">ID</th>
+        <th scope="col">Title</th>
+        <th scope="col">Body</th>
+    </tr>
+        </thead>
+        <tbody id="table-body">
+        </tbody>
+        </table>
+    </div>
+</div>
+<script src="scripts/posts.js"></script>
