--- a/views/pagina_inicial.handlebars
+++ b/views/pagina_inicial.handlebars
@@ -2,6 +2,7 @@
   <div class="section">
     <div class="section1">
       <h1 class="text-homepage">Você deseja fazer parte do futuro?</h1>
+      <h6 class="text-homepage">Então junte-se a Noxus!</h6>
       <img src="imagens/ic-scroll.svg" class="mouse-image" />
     </div>
   </div>
